Segfault when disconnecting the monitor Blender is on, using Wayland #103586

Closed
opened 2023-01-01 13:56:10 +01:00 by MultisampledNight · 5 comments

System Information
Operating system: Linux-6.1.1-zen1-1-zen-x86_64-with-glibc2.36 64 Bits
Graphics card: Mesa Intel(R) Iris(R) Plus Graphics (ICL GT2) Intel 4.6 (Core Profile) Mesa 22.3.1
Wayland compositor: Sway
Monitor setup:

  1. 1920x1200 screen at 0,0 with scale=1
  2. 2256x1504 screen at 1128,1200 with scale=2

Blender Version
Broken: version: 3.4.1, branch: makepkg (modified), commit date: 2022-12-20 08:50, hash: ef9ca44dee
Worked: Unknown

Short description of error
Blender segfaults (= crashes) when disconnecting the monitor.

Exact steps for others to reproduce the error

  1. Open Blender, ensuring it is using Wayland and not Xwayland
  2. Disconnect the monitor (can also be done using swaymsg output DISPLAY-IDENTIFIER disable)
  3. See Blender segfaulting

Doesn't seem to rely on the currently open file, it also works when the welcome dashboard is open.

Backtraces

This is the backtrace I got using coredumpctl debug and then bt on my machine:

backtrace.txt

On the other hand, I've asked a friend of mine running a triple-monitor AMD GPU setup (but also running Sway on Arch) to reproduce this, and they got this backtrace instead:

other-backtrace.txt

Other information

Maybe https:*developer.blender.org/rBe844f706fbc438e0f79c2162a3eeed34b8daa62b is related to this. Building from https:*developer.blender.org/rB14c218b3fd9e936423a5bc3269063aca76f61681 however causes linking errors for me, maybe due to updated dependencies:

linking-errors.txt

**System Information** Operating system: Linux-6.1.1-zen1-1-zen-x86_64-with-glibc2.36 64 Bits Graphics card: Mesa Intel(R) Iris(R) Plus Graphics (ICL GT2) Intel 4.6 (Core Profile) Mesa 22.3.1 Wayland compositor: Sway Monitor setup: 1. 1920x1200 screen at 0,0 with scale=1 2. 2256x1504 screen at 1128,1200 with scale=2 **Blender Version** Broken: version: 3.4.1, branch: makepkg (modified), commit date: 2022-12-20 08:50, hash: `ef9ca44dee` Worked: Unknown **Short description of error** Blender segfaults (= crashes) when disconnecting the monitor. **Exact steps for others to reproduce the error** 1. Open Blender, ensuring it is using Wayland and not Xwayland 2. Disconnect the monitor (can also be done using `swaymsg output DISPLAY-IDENTIFIER disable`) 3. See Blender segfaulting Doesn't seem to rely on the currently open file, it also works when the welcome dashboard is open. **Backtraces** This is the backtrace I got using `coredumpctl debug` and then `bt` on my machine: [backtrace.txt](https://archive.blender.org/developer/F14104162/backtrace.txt) On the other hand, I've asked a friend of mine running a triple-monitor AMD GPU setup (but also running Sway on Arch) to reproduce this, and they got this backtrace instead: [other-backtrace.txt](https://archive.blender.org/developer/F14104164/other-backtrace.txt) **Other information** Maybe https:*developer.blender.org/rBe844f706fbc438e0f79c2162a3eeed34b8daa62b is related to this. Building from https:*developer.blender.org/rB14c218b3fd9e936423a5bc3269063aca76f61681 however causes linking errors for me, maybe due to updated dependencies: [linking-errors.txt](https://archive.blender.org/developer/F14104178/linking-errors.txt)

Added subscriber: @multisn8-2

Added subscriber: @multisn8-2
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This looks to be a bug in wlroots, reported: https://gitlab.freedesktop.org/wlroots/wlroots/-/issues/3559

Although as this doesn't crash with SDL or GTK, it may be worth supporting it.

This looks to be a bug in wlroots, reported: https://gitlab.freedesktop.org/wlroots/wlroots/-/issues/3559 Although as this doesn't crash with SDL or GTK, it may be worth supporting it.

This issue was referenced by cbd12e730a

This issue was referenced by cbd12e730af55d16dfcf3c9aa8ff5f3e6bc8d0ec

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2023-01-04 06:13:01 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103586
No description provided.